# vrf-passkey

./: .gitignore  API_COMPARISON.md  Caddyfile  Cargo.toml  PRF_session_manager.md  README.md  index.html  key-derivation.md  npm_link.sh  npm_link_sdk.sh  npm_sdk.md  package-lock.json  package.json  pnpm-lock.yaml  server-signing.md  signer-contract.md  style.css  test_coverage.md  tsconfig.app.json  tsconfig.json  vite.config.ts
docs/: QR_account_backup.md  browser_secure_enclave.md  create_account_and_verify_integration.md  dd_keys_import_accounts.md  deterministic_key_recovery_with_touchId.md  import_account.md  link_device_by_QR_code.md  link_device_cleanup_stale_keys.md  move_rpc_call_to_wasm_worker.md  move_rpc_verify_call_to_wasm_worker.md  move_verification_to_worker_integration.md  session_scoped_webauthn_auth.md  simplewebauthn_comparison.md  vrf_challenges.md  wasm_signer_worker_action_types_expansion.md
frontend/: WEBAUTHN_MANAGER_SECURITY.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/public/sdk/: wasm_signer_worker.js  wasm_signer_worker_bg.wasm  wasm_vrf_worker.js  wasm_vrf_worker_bg.wasm  web3authn-signer.worker.js  web3authn-signer.worker.js.map  web3authn-vrf.worker.js  web3authn-vrf.worker.js.map
frontend/public/sdk/cjs/: config.js  config.js.map  index.js
frontend/public/sdk/cjs/react/: index.js
frontend/public/sdk/cjs/react/src/: config.js  (+1 more)
frontend/public/sdk/cjs/utils/: encoders.js  encoders.js.map  index.js.map
frontend/public/sdk/esm/: config.js  config.js.map  index.js
frontend/public/sdk/esm/react/: index.css  index.js
frontend/public/sdk/esm/utils/: encoders.js  encoders.js.map  index.js.map
frontend/public/sdk/types/: config.d.ts  config.d.ts.map  index.d.ts  index.d.ts.map
frontend/public/sdk/types/core/: web3authn-signer.worker.d.ts  web3authn-signer.worker.d.ts.map  web3authn-vrf.worker.d.ts  web3authn-vrf.worker.d.ts.map
frontend/public/sdk/types/react/: index.d.ts  index.d.ts.map  types.d.ts  types.d.ts.map
frontend/public/sdk/types/utils/: encoders.d.ts  encoders.d.ts.map  index.d.ts  index.d.ts.map
frontend/public/sdk/types/wasm_signer_worker/: wasm_signer_worker.d.ts  wasm_signer_worker.d.ts.map
frontend/public/workers/: onetimePasskeySigner.worker.js  passkey_crypto_worker.js  passkey_crypto_worker_bg.wasm  vrf-service-worker.js  vrf_service_worker.js  vrf_service_worker_bg.wasm  web3authn_passkey_worker_bg.wasm
frontend/src/: config.ts  index.css  main.tsx  near.ts  onetimePasskeySigner.worker.ts  passkeyCrypto.worker.ts  types.ts  utils.ts
frontend/src/components/: GreetingMenu.tsx  LinkDeviceScanQR.tsx  LinkDeviceShowQR.tsx  Navbar.tsx  PasskeyLogin.tsx  PasskeyLoginMenu.tsx  ProfileButton.tsx  RefreshIcon.tsx
frontend/src/components/Web3AuthUserProfile/: README.md  Web3authUserProfile.css  index.ts  types.ts
frontend/src/components/icons/: AvatarIcon.tsx  GearIcon.tsx  HamburgerIcon.tsx  UserDetails.tsx
frontend/src/contexts/: PasskeyContext.tsx  SettingsContext.tsx
frontend/src/contexts/PasskeyContext/: index.tsx  types.ts
frontend/src/hooks/: useSetGreeting.ts  useToastListener.ts  useWeb3AuthnEventListener.ts
frontend/src/pages/: HomePage.tsx  TestNearAccount.tsx  TestOnetimeWorker.tsx  TestWebAuthnManager.tsx
frontend/src/security/: WebAuthnManager.ts  onetimePasskeySigner.worker.ts
frontend/src/services/: ClientUserManager.ts  WebAuthnChallengeManager.ts
frontend/src/utils/: nearAccount.ts
frontend/wasm-worker/: Cargo.toml
frontend/wasm-worker/src/: lib.rs
my-react-app/: README.md  package-lock.json  package.json  vite.config.ts
my-react-app/src/: App.css  App.tsx  wagmi.ts
my-react-app/src/components/: PasskeyLogin.tsx
relay-server/: .env  README.md  env.example  package.json  pnpm-lock.yaml  relayer_plan.md  test-account-creation.ts  test-delegate-flow.ts  tsconfig.json
relay-server/src/: accountService.ts  config.ts  index.ts  nearService.ts  types.ts
relay-server/src/routes/: accounts.ts  health.ts  index.ts  relay.ts
relay-server/src/services/: accountCreationService.ts  delegateService.ts
server/: env.example  package-lock.json  package.json  passkey_users.db  pnpm-lock.yaml  test-integration.js
server/src/: authenticatorService.ts  challengeStore.ts  config.ts  contractOperations.ts  index.ts  keyDerivation.ts  nearService.ts  types.ts
server/src/config/: index.ts
server/src/database/: index.ts  passkey_users.db  userOperations.ts
server/src/routes/: account.ts  authentication.ts  health.ts  index.ts  registration.ts
server/src/types/: README.md  endpoints.ts  index.ts  sse.ts
src/: App.css  App.tsx  main.ts  wagmi.ts
src/components/: PasskeyLogin.tsx
webauthn-contract/: Cargo.toml  README.md  deploy-dev.sh  deploy.sh  env.example  upgrade-dev.sh  upgrade.sh
webauthn-contract/docs/: authenticator_refactor.md  json_formats.md  limitations.md  link_device_cleanup_stale_keys.md
webauthn-contract/docs/limitations/: aaguid_metadata_validation.md  link_device_cleanup_stale_keys.md  x5c_support.md
webauthn-contract/src/: admin.rs  authenticators.rs  contract_helpers.rs  contract_state.rs  errors.rs  generate_authentication_options.rs  generate_registration_options.rs  lib.rs  link_device.rs  p256_utils.rs  parsers.rs  test_yield_resume.rs  types.rs  verifiers.rs  verify_authentication_response.rs  verify_registration_response.rs
webauthn-contract/src/utils/: errors.rs  mod.rs  p256_utils.rs  parsers.rs  validation.rs  verifiers.rs
webauthn-contract/src/utils/vrf_verifier/: mod.rs  vrf_contract_verifier_wrapper.rs  vrf_wasm_verifier.rs  vrf_wasm_verifier_wrapper.rs
webauthn-contract/tests/: init_test.rs  test_admin.rs  test_authentication.rs  test_basics.rs  test_device_linking_cleanup.rs  test_device_numbers.rs  test_e2e_create_account_and_verify.rs  test_e2e_vrf_authentication.rs  test_e2e_vrf_registration.rs  test_registration.rs  test_unit_admin.rs  test_unit_vrf_contract_verifier.rs  test_unit_vrf_wasm.rs  test_user_registry.rs  test_yield.rs  utils_contracts.rs  utils_mocks.rs
(+296 files in other folders)
