[profile.release]
codegen-units = 1
# opt-level = "z"
opt-level = "s"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
resolver = "2"
members = [
    "webauthn-contract",
]
exclude = [
    "packages/passkey/src/wasm-vrf-worker",
    "packages/passkey/src/wasm-signer-worker",
]

