[package]
name = "passkey-crypto-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
aes-gcm = "0.10"
# For AES-GCM, we need a cipher implementation like `aes`
# aes = { version = "0.8", features = ["ctr"] } # Example, might not be needed if aes-gcm pulls it
hkdf = "0.12"
sha2 = "0.10"
base64 = "0.21"
base64ct = { version = "1.7.3", features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"

# Optional: for better panic messages in browser console
console_error_panic_hook = { version = "0.1.7", optional = true }

[features]
default = ["console_error_panic_hook"]
