[package]
name = "passkey-crypto-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
base64 = "0.21"
base64ct = { version = "1.6", features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
# For NEAR key generation and transaction signing
ed25519-dalek = { version = "2.1", default-features = false, features = ["rand_core"] }
bs58 = "0.5"
# Add CBOR parsing for WebAuthn attestationObject and COSE keys
ciborium = "0.2"
serde_bytes = "0.11"
# Serialization for transaction data
borsh = { version = "1.3", features = ["derive"] }

# Optional: for better panic messages in browser console
console_error_panic_hook = { version = "0.1.7", optional = true }

[features]
default = ["console_error_panic_hook"]
